# fetch-slack-emoji

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/fetch_slack_emoji/: __init__.py  download.py
tests/: __init__.py
